--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section id="home">
         <video autoplay muted loop id="bg-video">
-            <source src="yo.mp4" type="video/mp4">
+            <source src="yo1.mp4" type="video/mp4">
             <!-- Add other video formats if needed -->
             Your browser does not support HTML5 video.
         </video>
